// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`debts.update > functionality > update amount > counterparty accepts manually 1`] = `
{
  "updated": {
    "debts": {
      "id:176b7525-1010-47ca-b021-5468f89479dc|ownerAccountId:357cefed-020c-4f2a-8a20-69a485873b05": {
        "amount": "-777.8600",
        "updatedAt": "2020-01-01T00:01:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update amount > counterparty auto-accepts - debt didn't exist beforehand 1`] = `
{
  "added": {
    "debts": {
      "id:26443bc4-be00-4b29-8e25-a2a02d528edb|ownerAccountId:2183d9a8-8002-44c6-ac3b-f84ad9eba49b": {
        "amount": "-452.7300",
        "createdAt": "2020-01-01T00:00:00.000Z",
        "currencyCode": "BRL",
        "id": "26443bc4-be00-4b29-8e25-a2a02d528edb",
        "note": "Fugit a nihil placeat vel sit aperiam eum dignissimos placeat.",
        "ownerAccountId": "2183d9a8-8002-44c6-ac3b-f84ad9eba49b",
        "receiptId": null,
        "timestamp": "2020-01-01T00:00:00.000Z",
        "updatedAt": "2020-01-01T00:00:00.000Z",
        "userId": "23964f67-319a-46b7-802c-32f7af698334",
      },
    },
  },
  "updated": {
    "debts": {
      "id:26443bc4-be00-4b29-8e25-a2a02d528edb|ownerAccountId:2d3de677-5844-4b0e-a36b-48718c65f8c8": {
        "amount": "452.7300",
        "updatedAt": "2020-01-01T00:01:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update amount > counterparty auto-accepts - debt existed beforehand 1`] = `
{
  "updated": {
    "debts": {
      "id:86cc3ab5-1baf-425c-ae2c-4488a4b986d1|ownerAccountId:4c35cbb8-2406-4347-86f7-ba5933c76dfc": {
        "amount": "-768.1100",
        "updatedAt": "2020-01-01T00:01:00.000Z",
      },
      "id:86cc3ab5-1baf-425c-ae2c-4488a4b986d1|ownerAccountId:4de94a07-9f2d-4495-b3be-e5973cc40050": {
        "amount": "768.1100",
        "updatedAt": "2020-01-01T00:01:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update currency code > counterparty accepts manually 1`] = `
{
  "updated": {
    "debts": {
      "id:176b7525-1010-47ca-b021-5468f89479dc|ownerAccountId:357cefed-020c-4f2a-8a20-69a485873b05": {
        "currencyCode": "MUR",
        "updatedAt": "2020-01-01T00:01:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update currency code > counterparty auto-accepts - debt didn't exist beforehand 1`] = `
{
  "added": {
    "debts": {
      "id:26443bc4-be00-4b29-8e25-a2a02d528edb|ownerAccountId:2183d9a8-8002-44c6-ac3b-f84ad9eba49b": {
        "amount": "-762.7400",
        "createdAt": "2020-01-01T00:00:00.000Z",
        "currencyCode": "CLP",
        "id": "26443bc4-be00-4b29-8e25-a2a02d528edb",
        "note": "Fugit a nihil placeat vel sit aperiam eum dignissimos placeat.",
        "ownerAccountId": "2183d9a8-8002-44c6-ac3b-f84ad9eba49b",
        "receiptId": null,
        "timestamp": "2020-01-01T00:00:00.000Z",
        "updatedAt": "2020-01-01T00:00:00.000Z",
        "userId": "23964f67-319a-46b7-802c-32f7af698334",
      },
    },
  },
  "updated": {
    "debts": {
      "id:26443bc4-be00-4b29-8e25-a2a02d528edb|ownerAccountId:2d3de677-5844-4b0e-a36b-48718c65f8c8": {
        "currencyCode": "CLP",
        "updatedAt": "2020-01-01T00:01:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update currency code > counterparty auto-accepts - debt existed beforehand 1`] = `
{
  "updated": {
    "debts": {
      "id:86cc3ab5-1baf-425c-ae2c-4488a4b986d1|ownerAccountId:4c35cbb8-2406-4347-86f7-ba5933c76dfc": {
        "currencyCode": "MDL",
        "updatedAt": "2020-01-01T00:01:00.000Z",
      },
      "id:86cc3ab5-1baf-425c-ae2c-4488a4b986d1|ownerAccountId:4de94a07-9f2d-4495-b3be-e5973cc40050": {
        "currencyCode": "MDL",
        "updatedAt": "2020-01-01T00:01:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple debts > with distinctly locking values > counterparty accepts manually 1`] = `
{
  "updated": {
    "debts": {
      "id:176b7525-1010-47ca-b021-5468f89479dc|ownerAccountId:357cefed-020c-4f2a-8a20-69a485873b05": {
        "amount": "-750.1800",
        "updatedAt": "2020-01-01T00:01:00.000Z",
      },
      "id:b51af698-7d8a-4c04-bf96-04a4b25e4431|ownerAccountId:357cefed-020c-4f2a-8a20-69a485873b05": {
        "note": "illo perferendis illo",
        "updatedAt": "2020-01-01T00:01:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple debts > with distinctly locking values > counterparty auto-accepts - debt didn't exist beforehand 1`] = `
{
  "added": {
    "debts": {
      "id:26443bc4-be00-4b29-8e25-a2a02d528edb|ownerAccountId:2183d9a8-8002-44c6-ac3b-f84ad9eba49b": {
        "amount": "-344.1900",
        "createdAt": "2020-01-01T00:00:00.000Z",
        "currencyCode": "BRL",
        "id": "26443bc4-be00-4b29-8e25-a2a02d528edb",
        "note": "Fugit a nihil placeat vel sit aperiam eum dignissimos placeat.",
        "ownerAccountId": "2183d9a8-8002-44c6-ac3b-f84ad9eba49b",
        "receiptId": null,
        "timestamp": "2020-01-01T00:00:00.000Z",
        "updatedAt": "2020-01-01T00:00:00.000Z",
        "userId": "23964f67-319a-46b7-802c-32f7af698334",
      },
      "id:ff1f6b0a-4c01-4c01-b9c7-c87807ce603b|ownerAccountId:2183d9a8-8002-44c6-ac3b-f84ad9eba49b": {
        "amount": "-569.3700",
        "createdAt": "2020-01-01T00:00:00.000Z",
        "currencyCode": "CLP",
        "id": "ff1f6b0a-4c01-4c01-b9c7-c87807ce603b",
        "note": "sit aspernatur rem",
        "ownerAccountId": "2183d9a8-8002-44c6-ac3b-f84ad9eba49b",
        "receiptId": null,
        "timestamp": "2020-01-01T00:00:00.000Z",
        "updatedAt": "2020-01-01T00:00:00.000Z",
        "userId": "23964f67-319a-46b7-802c-32f7af698334",
      },
    },
  },
  "updated": {
    "debts": {
      "id:26443bc4-be00-4b29-8e25-a2a02d528edb|ownerAccountId:2d3de677-5844-4b0e-a36b-48718c65f8c8": {
        "amount": "344.1900",
        "updatedAt": "2020-01-01T00:01:00.000Z",
      },
      "id:ff1f6b0a-4c01-4c01-b9c7-c87807ce603b|ownerAccountId:2d3de677-5844-4b0e-a36b-48718c65f8c8": {
        "note": "sit aspernatur rem",
        "updatedAt": "2020-01-01T00:01:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple debts > with distinctly locking values > counterparty auto-accepts - debt existed beforehand 1`] = `
{
  "added": {
    "debts": {
      "id:305975e4-14d2-4d70-88f6-b0a34d68a350|ownerAccountId:4de94a07-9f2d-4495-b3be-e5973cc40050": {
        "amount": "145.0600",
        "createdAt": "2020-01-01T00:00:00.000Z",
        "currencyCode": "MDL",
        "id": "305975e4-14d2-4d70-88f6-b0a34d68a350",
        "note": "impedit error repellat",
        "ownerAccountId": "4de94a07-9f2d-4495-b3be-e5973cc40050",
        "receiptId": null,
        "timestamp": "2020-01-01T00:00:00.000Z",
        "updatedAt": "2020-01-01T00:00:00.000Z",
        "userId": "d8b8f416-02b5-447f-9a2b-5b97ab54b86e",
      },
    },
  },
  "updated": {
    "debts": {
      "id:305975e4-14d2-4d70-88f6-b0a34d68a350|ownerAccountId:4c35cbb8-2406-4347-86f7-ba5933c76dfc": {
        "note": "impedit error repellat",
        "updatedAt": "2020-01-01T00:01:00.000Z",
      },
      "id:86cc3ab5-1baf-425c-ae2c-4488a4b986d1|ownerAccountId:4c35cbb8-2406-4347-86f7-ba5933c76dfc": {
        "amount": "59.0200",
        "updatedAt": "2020-01-01T00:01:00.000Z",
      },
      "id:86cc3ab5-1baf-425c-ae2c-4488a4b986d1|ownerAccountId:4de94a07-9f2d-4495-b3be-e5973cc40050": {
        "amount": "-59.0200",
        "updatedAt": "2020-01-01T00:01:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple debts > with locking values > counterparty accepts manually 1`] = `
{
  "updated": {
    "debts": {
      "id:176b7525-1010-47ca-b021-5468f89479dc|ownerAccountId:357cefed-020c-4f2a-8a20-69a485873b05": {
        "amount": "-750.1800",
        "updatedAt": "2020-01-01T00:01:00.000Z",
      },
      "id:b51af698-7d8a-4c04-bf96-04a4b25e4431|ownerAccountId:357cefed-020c-4f2a-8a20-69a485873b05": {
        "amount": "18.9100",
        "updatedAt": "2020-01-01T00:01:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple debts > with locking values > counterparty auto-accepts - debt didn't exist beforehand 1`] = `
{
  "added": {
    "debts": {
      "id:26443bc4-be00-4b29-8e25-a2a02d528edb|ownerAccountId:2183d9a8-8002-44c6-ac3b-f84ad9eba49b": {
        "amount": "-344.1900",
        "createdAt": "2020-01-01T00:00:00.000Z",
        "currencyCode": "BRL",
        "id": "26443bc4-be00-4b29-8e25-a2a02d528edb",
        "note": "Fugit a nihil placeat vel sit aperiam eum dignissimos placeat.",
        "ownerAccountId": "2183d9a8-8002-44c6-ac3b-f84ad9eba49b",
        "receiptId": null,
        "timestamp": "2020-01-01T00:00:00.000Z",
        "updatedAt": "2020-01-01T00:00:00.000Z",
        "userId": "23964f67-319a-46b7-802c-32f7af698334",
      },
      "id:ff1f6b0a-4c01-4c01-b9c7-c87807ce603b|ownerAccountId:2183d9a8-8002-44c6-ac3b-f84ad9eba49b": {
        "amount": "-135.7700",
        "createdAt": "2020-01-01T00:00:00.000Z",
        "currencyCode": "CLP",
        "id": "ff1f6b0a-4c01-4c01-b9c7-c87807ce603b",
        "note": "Labore molestias cum vel ipsam ducimus doloribus qui.",
        "ownerAccountId": "2183d9a8-8002-44c6-ac3b-f84ad9eba49b",
        "receiptId": null,
        "timestamp": "2020-01-01T00:00:00.000Z",
        "updatedAt": "2020-01-01T00:00:00.000Z",
        "userId": "23964f67-319a-46b7-802c-32f7af698334",
      },
    },
  },
  "updated": {
    "debts": {
      "id:26443bc4-be00-4b29-8e25-a2a02d528edb|ownerAccountId:2d3de677-5844-4b0e-a36b-48718c65f8c8": {
        "amount": "344.1900",
        "updatedAt": "2020-01-01T00:01:00.000Z",
      },
      "id:ff1f6b0a-4c01-4c01-b9c7-c87807ce603b|ownerAccountId:2d3de677-5844-4b0e-a36b-48718c65f8c8": {
        "amount": "135.7700",
        "updatedAt": "2020-01-01T00:01:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple debts > with locking values > counterparty auto-accepts - debt existed beforehand 1`] = `
{
  "added": {
    "debts": {
      "id:305975e4-14d2-4d70-88f6-b0a34d68a350|ownerAccountId:4de94a07-9f2d-4495-b3be-e5973cc40050": {
        "amount": "622.3500",
        "createdAt": "2020-01-01T00:00:00.000Z",
        "currencyCode": "MDL",
        "id": "305975e4-14d2-4d70-88f6-b0a34d68a350",
        "note": "Quam iure quae provident commodi voluptatem ea numquam itaque.",
        "ownerAccountId": "4de94a07-9f2d-4495-b3be-e5973cc40050",
        "receiptId": null,
        "timestamp": "2020-01-01T00:00:00.000Z",
        "updatedAt": "2020-01-01T00:00:00.000Z",
        "userId": "d8b8f416-02b5-447f-9a2b-5b97ab54b86e",
      },
    },
  },
  "updated": {
    "debts": {
      "id:305975e4-14d2-4d70-88f6-b0a34d68a350|ownerAccountId:4c35cbb8-2406-4347-86f7-ba5933c76dfc": {
        "amount": "-622.3500",
        "updatedAt": "2020-01-01T00:01:00.000Z",
      },
      "id:86cc3ab5-1baf-425c-ae2c-4488a4b986d1|ownerAccountId:4c35cbb8-2406-4347-86f7-ba5933c76dfc": {
        "amount": "59.0200",
        "updatedAt": "2020-01-01T00:01:00.000Z",
      },
      "id:86cc3ab5-1baf-425c-ae2c-4488a4b986d1|ownerAccountId:4de94a07-9f2d-4495-b3be-e5973cc40050": {
        "amount": "-59.0200",
        "updatedAt": "2020-01-01T00:01:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple debts > with non-locking values > counterparty accepts manually 1`] = `
{
  "updated": {
    "debts": {
      "id:176b7525-1010-47ca-b021-5468f89479dc|ownerAccountId:357cefed-020c-4f2a-8a20-69a485873b05": {
        "note": "cupiditate nobis illo",
        "updatedAt": "2020-01-01T00:01:00.000Z",
      },
      "id:b51af698-7d8a-4c04-bf96-04a4b25e4431|ownerAccountId:357cefed-020c-4f2a-8a20-69a485873b05": {
        "note": "perferendis illo recusandae",
        "updatedAt": "2020-01-01T00:01:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple debts > with non-locking values > counterparty auto-accepts - debt didn't exist beforehand 1`] = `
{
  "added": {
    "debts": {
      "id:26443bc4-be00-4b29-8e25-a2a02d528edb|ownerAccountId:2183d9a8-8002-44c6-ac3b-f84ad9eba49b": {
        "amount": "-762.7400",
        "createdAt": "2020-01-01T00:00:00.000Z",
        "currencyCode": "BRL",
        "id": "26443bc4-be00-4b29-8e25-a2a02d528edb",
        "note": "amet nostrum sit",
        "ownerAccountId": "2183d9a8-8002-44c6-ac3b-f84ad9eba49b",
        "receiptId": null,
        "timestamp": "2020-01-01T00:00:00.000Z",
        "updatedAt": "2020-01-01T00:00:00.000Z",
        "userId": "23964f67-319a-46b7-802c-32f7af698334",
      },
      "id:ff1f6b0a-4c01-4c01-b9c7-c87807ce603b|ownerAccountId:2183d9a8-8002-44c6-ac3b-f84ad9eba49b": {
        "amount": "-569.3700",
        "createdAt": "2020-01-01T00:00:00.000Z",
        "currencyCode": "CLP",
        "id": "ff1f6b0a-4c01-4c01-b9c7-c87807ce603b",
        "note": "aspernatur rem quasi",
        "ownerAccountId": "2183d9a8-8002-44c6-ac3b-f84ad9eba49b",
        "receiptId": null,
        "timestamp": "2020-01-01T00:00:00.000Z",
        "updatedAt": "2020-01-01T00:00:00.000Z",
        "userId": "23964f67-319a-46b7-802c-32f7af698334",
      },
    },
  },
  "updated": {
    "debts": {
      "id:26443bc4-be00-4b29-8e25-a2a02d528edb|ownerAccountId:2d3de677-5844-4b0e-a36b-48718c65f8c8": {
        "note": "amet nostrum sit",
        "updatedAt": "2020-01-01T00:01:00.000Z",
      },
      "id:ff1f6b0a-4c01-4c01-b9c7-c87807ce603b|ownerAccountId:2d3de677-5844-4b0e-a36b-48718c65f8c8": {
        "note": "aspernatur rem quasi",
        "updatedAt": "2020-01-01T00:01:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple debts > with non-locking values > counterparty auto-accepts - debt existed beforehand 1`] = `
{
  "added": {
    "debts": {
      "id:305975e4-14d2-4d70-88f6-b0a34d68a350|ownerAccountId:4de94a07-9f2d-4495-b3be-e5973cc40050": {
        "amount": "145.0600",
        "createdAt": "2020-01-01T00:00:00.000Z",
        "currencyCode": "MDL",
        "id": "305975e4-14d2-4d70-88f6-b0a34d68a350",
        "note": "error repellat autem",
        "ownerAccountId": "4de94a07-9f2d-4495-b3be-e5973cc40050",
        "receiptId": null,
        "timestamp": "2020-01-01T00:00:00.000Z",
        "updatedAt": "2020-01-01T00:00:00.000Z",
        "userId": "d8b8f416-02b5-447f-9a2b-5b97ab54b86e",
      },
    },
  },
  "updated": {
    "debts": {
      "id:305975e4-14d2-4d70-88f6-b0a34d68a350|ownerAccountId:4c35cbb8-2406-4347-86f7-ba5933c76dfc": {
        "note": "error repellat autem",
        "updatedAt": "2020-01-01T00:01:00.000Z",
      },
      "id:86cc3ab5-1baf-425c-ae2c-4488a4b986d1|ownerAccountId:4c35cbb8-2406-4347-86f7-ba5933c76dfc": {
        "note": "vitae ipsa impedit",
        "updatedAt": "2020-01-01T00:01:00.000Z",
      },
      "id:86cc3ab5-1baf-425c-ae2c-4488a4b986d1|ownerAccountId:4de94a07-9f2d-4495-b3be-e5973cc40050": {
        "updatedAt": "2020-01-01T00:01:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple properties > counterparty accepts manually 1`] = `
{
  "updated": {
    "debts": {
      "id:176b7525-1010-47ca-b021-5468f89479dc|ownerAccountId:357cefed-020c-4f2a-8a20-69a485873b05": {
        "amount": "239.2900",
        "currencyCode": "SEK",
        "note": "quod recusandae cupiditate",
        "receiptId": "b51af698-7d8a-4c04-bf96-04a4b25e4431",
        "timestamp": "2020-06-01T00:00:00.000Z",
        "updatedAt": "2020-01-01T00:01:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple properties > counterparty auto-accepts - debt didn't exist beforehand 1`] = `
{
  "added": {
    "debts": {
      "id:26443bc4-be00-4b29-8e25-a2a02d528edb|ownerAccountId:2183d9a8-8002-44c6-ac3b-f84ad9eba49b": {
        "amount": "288.2500",
        "createdAt": "2020-01-01T00:00:00.000Z",
        "currencyCode": "IDR",
        "id": "26443bc4-be00-4b29-8e25-a2a02d528edb",
        "note": "molestias cum vel",
        "ownerAccountId": "2183d9a8-8002-44c6-ac3b-f84ad9eba49b",
        "receiptId": "ff1f6b0a-4c01-4c01-b9c7-c87807ce603b",
        "timestamp": "2020-06-01T00:00:00.000Z",
        "updatedAt": "2020-01-01T00:00:00.000Z",
        "userId": "23964f67-319a-46b7-802c-32f7af698334",
      },
    },
  },
  "updated": {
    "debts": {
      "id:26443bc4-be00-4b29-8e25-a2a02d528edb|ownerAccountId:2d3de677-5844-4b0e-a36b-48718c65f8c8": {
        "amount": "-288.2500",
        "currencyCode": "IDR",
        "note": "molestias cum vel",
        "receiptId": "ff1f6b0a-4c01-4c01-b9c7-c87807ce603b",
        "timestamp": "2020-06-01T00:00:00.000Z",
        "updatedAt": "2020-01-01T00:01:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple properties > counterparty auto-accepts - debt existed beforehand 1`] = `
{
  "updated": {
    "debts": {
      "id:86cc3ab5-1baf-425c-ae2c-4488a4b986d1|ownerAccountId:4c35cbb8-2406-4347-86f7-ba5933c76dfc": {
        "amount": "-463.5200",
        "currencyCode": "JOD",
        "note": "iure quae provident",
        "receiptId": "305975e4-14d2-4d70-88f6-b0a34d68a350",
        "timestamp": "2020-06-01T00:00:00.000Z",
        "updatedAt": "2020-01-01T00:01:00.000Z",
      },
      "id:86cc3ab5-1baf-425c-ae2c-4488a4b986d1|ownerAccountId:4de94a07-9f2d-4495-b3be-e5973cc40050": {
        "amount": "463.5200",
        "currencyCode": "JOD",
        "receiptId": "305975e4-14d2-4d70-88f6-b0a34d68a350",
        "timestamp": "2020-06-01T00:00:00.000Z",
        "updatedAt": "2020-01-01T00:01:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple properties with multiple requests > counterparty accepts manually 1`] = `
{
  "updated": {
    "debts": {
      "id:176b7525-1010-47ca-b021-5468f89479dc|ownerAccountId:357cefed-020c-4f2a-8a20-69a485873b05": {
        "amount": "-777.8600",
        "timestamp": "2020-06-01T00:00:00.000Z",
        "updatedAt": "2020-01-01T00:01:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple properties with multiple requests > counterparty auto-accepts - debt didn't exist beforehand 1`] = `
{
  "added": {
    "debts": {
      "id:26443bc4-be00-4b29-8e25-a2a02d528edb|ownerAccountId:2183d9a8-8002-44c6-ac3b-f84ad9eba49b": {
        "amount": "-452.7300",
        "createdAt": "2020-01-01T00:00:00.000Z",
        "currencyCode": "BRL",
        "id": "26443bc4-be00-4b29-8e25-a2a02d528edb",
        "note": "Fugit a nihil placeat vel sit aperiam eum dignissimos placeat.",
        "ownerAccountId": "2183d9a8-8002-44c6-ac3b-f84ad9eba49b",
        "receiptId": null,
        "timestamp": "2020-06-01T00:00:00.000Z",
        "updatedAt": "2020-01-01T00:00:00.000Z",
        "userId": "23964f67-319a-46b7-802c-32f7af698334",
      },
    },
  },
  "updated": {
    "debts": {
      "id:26443bc4-be00-4b29-8e25-a2a02d528edb|ownerAccountId:2d3de677-5844-4b0e-a36b-48718c65f8c8": {
        "amount": "452.7300",
        "timestamp": "2020-06-01T00:00:00.000Z",
        "updatedAt": "2020-01-01T00:01:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple properties with multiple requests > counterparty auto-accepts - debt existed beforehand 1`] = `
{
  "updated": {
    "debts": {
      "id:86cc3ab5-1baf-425c-ae2c-4488a4b986d1|ownerAccountId:4c35cbb8-2406-4347-86f7-ba5933c76dfc": {
        "amount": "-768.1100",
        "timestamp": "2020-06-01T00:00:00.000Z",
        "updatedAt": "2020-01-01T00:01:00.000Z",
      },
      "id:86cc3ab5-1baf-425c-ae2c-4488a4b986d1|ownerAccountId:4de94a07-9f2d-4495-b3be-e5973cc40050": {
        "amount": "768.1100",
        "timestamp": "2020-06-01T00:00:00.000Z",
        "updatedAt": "2020-01-01T00:01:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update note > counterparty accepts manually 1`] = `
{
  "updated": {
    "debts": {
      "id:176b7525-1010-47ca-b021-5468f89479dc|ownerAccountId:357cefed-020c-4f2a-8a20-69a485873b05": {
        "note": "excepturi quo quae",
        "updatedAt": "2020-01-01T00:01:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update note > counterparty auto-accepts - debt didn't exist beforehand 1`] = `
{
  "added": {
    "debts": {
      "id:26443bc4-be00-4b29-8e25-a2a02d528edb|ownerAccountId:2183d9a8-8002-44c6-ac3b-f84ad9eba49b": {
        "amount": "-762.7400",
        "createdAt": "2020-01-01T00:00:00.000Z",
        "currencyCode": "BRL",
        "id": "26443bc4-be00-4b29-8e25-a2a02d528edb",
        "note": "eos voluptate excepturi",
        "ownerAccountId": "2183d9a8-8002-44c6-ac3b-f84ad9eba49b",
        "receiptId": null,
        "timestamp": "2020-01-01T00:00:00.000Z",
        "updatedAt": "2020-01-01T00:00:00.000Z",
        "userId": "23964f67-319a-46b7-802c-32f7af698334",
      },
    },
  },
  "updated": {
    "debts": {
      "id:26443bc4-be00-4b29-8e25-a2a02d528edb|ownerAccountId:2d3de677-5844-4b0e-a36b-48718c65f8c8": {
        "note": "eos voluptate excepturi",
        "updatedAt": "2020-01-01T00:01:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update note > counterparty auto-accepts - debt existed beforehand 1`] = `
{
  "updated": {
    "debts": {
      "id:86cc3ab5-1baf-425c-ae2c-4488a4b986d1|ownerAccountId:4c35cbb8-2406-4347-86f7-ba5933c76dfc": {
        "note": "rem cumque fugit",
        "updatedAt": "2020-01-01T00:01:00.000Z",
      },
      "id:86cc3ab5-1baf-425c-ae2c-4488a4b986d1|ownerAccountId:4de94a07-9f2d-4495-b3be-e5973cc40050": {
        "updatedAt": "2020-01-01T00:01:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update receipt id > counterparty accepts manually 1`] = `
{
  "updated": {
    "debts": {
      "id:176b7525-1010-47ca-b021-5468f89479dc|ownerAccountId:357cefed-020c-4f2a-8a20-69a485873b05": {
        "receiptId": "b51af698-7d8a-4c04-bf96-04a4b25e4431",
        "updatedAt": "2020-01-01T00:01:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update receipt id > counterparty auto-accepts - debt didn't exist beforehand 1`] = `
{
  "added": {
    "debts": {
      "id:26443bc4-be00-4b29-8e25-a2a02d528edb|ownerAccountId:2183d9a8-8002-44c6-ac3b-f84ad9eba49b": {
        "amount": "-762.7400",
        "createdAt": "2020-01-01T00:00:00.000Z",
        "currencyCode": "BRL",
        "id": "26443bc4-be00-4b29-8e25-a2a02d528edb",
        "note": "Fugit a nihil placeat vel sit aperiam eum dignissimos placeat.",
        "ownerAccountId": "2183d9a8-8002-44c6-ac3b-f84ad9eba49b",
        "receiptId": "ff1f6b0a-4c01-4c01-b9c7-c87807ce603b",
        "timestamp": "2020-01-01T00:00:00.000Z",
        "updatedAt": "2020-01-01T00:00:00.000Z",
        "userId": "23964f67-319a-46b7-802c-32f7af698334",
      },
    },
  },
  "updated": {
    "debts": {
      "id:26443bc4-be00-4b29-8e25-a2a02d528edb|ownerAccountId:2d3de677-5844-4b0e-a36b-48718c65f8c8": {
        "receiptId": "ff1f6b0a-4c01-4c01-b9c7-c87807ce603b",
        "updatedAt": "2020-01-01T00:01:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update receipt id > counterparty auto-accepts - debt existed beforehand 1`] = `
{
  "updated": {
    "debts": {
      "id:86cc3ab5-1baf-425c-ae2c-4488a4b986d1|ownerAccountId:4c35cbb8-2406-4347-86f7-ba5933c76dfc": {
        "receiptId": "305975e4-14d2-4d70-88f6-b0a34d68a350",
        "updatedAt": "2020-01-01T00:01:00.000Z",
      },
      "id:86cc3ab5-1baf-425c-ae2c-4488a4b986d1|ownerAccountId:4de94a07-9f2d-4495-b3be-e5973cc40050": {
        "receiptId": "305975e4-14d2-4d70-88f6-b0a34d68a350",
        "updatedAt": "2020-01-01T00:01:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update timestamp > counterparty accepts manually 1`] = `
{
  "updated": {
    "debts": {
      "id:176b7525-1010-47ca-b021-5468f89479dc|ownerAccountId:357cefed-020c-4f2a-8a20-69a485873b05": {
        "timestamp": "2020-06-01T00:00:00.000Z",
        "updatedAt": "2020-01-01T00:01:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update timestamp > counterparty auto-accepts - debt didn't exist beforehand 1`] = `
{
  "added": {
    "debts": {
      "id:26443bc4-be00-4b29-8e25-a2a02d528edb|ownerAccountId:2183d9a8-8002-44c6-ac3b-f84ad9eba49b": {
        "amount": "-762.7400",
        "createdAt": "2020-01-01T00:00:00.000Z",
        "currencyCode": "BRL",
        "id": "26443bc4-be00-4b29-8e25-a2a02d528edb",
        "note": "Fugit a nihil placeat vel sit aperiam eum dignissimos placeat.",
        "ownerAccountId": "2183d9a8-8002-44c6-ac3b-f84ad9eba49b",
        "receiptId": null,
        "timestamp": "2020-06-01T00:00:00.000Z",
        "updatedAt": "2020-01-01T00:00:00.000Z",
        "userId": "23964f67-319a-46b7-802c-32f7af698334",
      },
    },
  },
  "updated": {
    "debts": {
      "id:26443bc4-be00-4b29-8e25-a2a02d528edb|ownerAccountId:2d3de677-5844-4b0e-a36b-48718c65f8c8": {
        "timestamp": "2020-06-01T00:00:00.000Z",
        "updatedAt": "2020-01-01T00:01:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update timestamp > counterparty auto-accepts - debt existed beforehand 1`] = `
{
  "updated": {
    "debts": {
      "id:86cc3ab5-1baf-425c-ae2c-4488a4b986d1|ownerAccountId:4c35cbb8-2406-4347-86f7-ba5933c76dfc": {
        "timestamp": "2020-06-01T00:00:00.000Z",
        "updatedAt": "2020-01-01T00:01:00.000Z",
      },
      "id:86cc3ab5-1baf-425c-ae2c-4488a4b986d1|ownerAccountId:4de94a07-9f2d-4495-b3be-e5973cc40050": {
        "timestamp": "2020-06-01T00:00:00.000Z",
        "updatedAt": "2020-01-01T00:01:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > input verification > mixed success and fail 1`] = `
{
  "updated": {
    "debts": {
      "id:597a7157-9b1d-4f32-b9ae-e2e76cd97b3b|ownerAccountId:f69c89cc-b28f-49ab-8c7b-635f1f9b819c": {
        "amount": "-47.6300",
        "updatedAt": "2020-01-01T00:01:00.000Z",
      },
    },
  },
}
`;
